--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,28 +1,272 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+<!-- Liens vers les fichiers Bootstrap via CDN -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
+
 <head>
-  <meta charset="UTF-8">
-  <title>Registration</title>
+    <title>Spring Boot Multi Step Form</title>
+    <style>
+        body {
+            font-family: tahoma;
+            font-size: 12px;
+        }
+
+        #signup-step {
+            margin: auto;
+            padding: 0;
+            width: 53%
+        }
+
+        #signup-step li {
+            list-style: none;
+            float: left;
+            padding: 5px 10px;
+            border-top: #004C9C 1px solid;
+            border-left: #004C9C 1px solid;
+            border-right: #004C9C 1px solid;
+            border-radius: 5px 5px 0 0;
+        }
+
+        .active {
+            color: #FFF;
+        }
+
+        #signup-step li.active {
+            background-color: #004C9C;
+        }
+
+        #signup-form {
+            clear: both;
+            border: 1px #004C9C solid;
+            padding: 20px;
+            width: 50%;
+            margin: auto;
+        }
+
+        .demoInputBox {
+            padding: 10px;
+            border: #CDCDCD 1px solid;
+            border-radius: 4px;
+            background-color: #FFF;
+            width: 50%;
+        }
+
+        .signup-error {
+            color: #FF0000;
+            padding-left: 15px;
+        }
+
+        .message {
+            color: #00FF00;
+            font-weight: bold;
+            width: 100%;
+            padding: 10px;
+        }
+
+        .btnAction {
+            padding: 5px 10px;
+            background-color: #F00;
+            border: 0;
+            color: #FFF;
+            cursor: pointer;
+            margin-top: 15px;
+        }
+
+        label {
+            line-height: 35px;
+        }
+
+        .alert {
+            color: #FF0000;
+            padding-left: 15px
+        }
+    </style>
+
+    <script crossorigin="anonymous"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <script>
+
+        function validate() {
+            /*            var output = true;
+                        $(".signup-error").html('');
+
+                        if ($("#personal-field").css('display') != 'none') {
+                            if (!($("#name").val())) {
+                                output = false;
+
+                                $("#name-error").html("Name required!");
+                            }
+
+                            if (!($("#dob").val())) {
+                                output = false;
+                                $("#dob-error").html("Date of Birth required!");
+                            }
+                        }
+
+                        if ($("#password-field").css('display') != 'none') {
+                            if (!($("#user-password").val())) {
+                                output = false;
+                                $("#password-error").html("Password required!");
+                            }
+
+                            if (!($("#confirm-password").val())) {
+                                output = false;
+                                $("#confirm-password-error").html("Confirm password required!");
+                            }
+
+                            if ($("#user-password").val() != $("#confirm-password").val()) {
+                                output = false;
+                                $("#confirm-password-error").html("Password not matched!");
+                            }
+                        }
+
+                        if ($("#contact-field").css('display') != 'none') {
+                            if (!($("#phone").val())) {
+                                output = false;
+                                $("#phone-error").html("Phone required!");
+                            }
+
+                            if (!($("#email").val())) {
+                                output = false;
+                                $("#email-error").html("Email required!");
+                            }
+
+                            if (!$("#email").val().match(/^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/)) {
+                                $("#email-error").html("Invalid Email!");
+                                output = false;
+                            }
+
+                            if (!($("#address").val())) {
+                                output = false;
+                                $("#address-error").html("Address required!");
+                            }
+                        }*/
+
+            return true;
+        }
+
+        $(document).ready(function () {
+            $("#next").click(function () {
+                var output = validate();
+                if (output === true) {
+                    var current = $(".active");
+                    var next = $(".active").next("li");
+                    if (next.length > 0) {
+                        $("#" + current.attr("id") + "-field").hide();
+                        $("#" + next.attr("id") + "-field").show();
+                        $("#back").show();
+                        $("#finish").hide();
+                        $(".active").removeClass("active");
+                        next.addClass("active");
+                        if ($(".active").attr("id") == $("li").last().attr("id")) {
+                            $("#next").hide();
+                            $("#finish").show();
+                        }
+                    }
+                }
+            });
+
+            $("#back").click(function () {
+                var current = $(".active");
+                var prev = $(".active").prev("li");
+                if (prev.length > 0) {
+                    $("#" + current.attr("id") + "-field").hide();
+                    $("#" + prev.attr("id") + "-field").show();
+                    $("#next").show();
+                    $("#finish").hide();
+                    $(".active").removeClass("active");
+                    prev.addClass("active");
+                    if ($(".active").attr("id") == $("li").first().attr("id")) {
+                        $("#back").hide();
+                    }
+                }
+            });
+
+            $("input#finish").click(function (e) {
+                var output = validate();
+                var current = $(".active");
+
+                if (output === true) {
+                    return true;
+                } else {
+                    //prevent refresh
+                    e.preventDefault();
+                    $("#" + current.attr("id") + "-field").show();
+                    $("#back").show();
+                    $("#finish").show();
+                }
+            });
+        });
+    </script>
+
 </head>
 <body>
-<h1>Registration</h1>
-<form method="post" th:action="@{/register}">
-  <label for="firstName">First Name:</label>
-  <input id="firstName" name="firstName" required type="text"><br>
+<ul id="signup-step">
+    <li class="active" id="personal">Personal Detail</li>
+    <li id="password">Password</li>
+    <li id="contact">Contact</li>
+</ul>
 
-  <label for="lastName">Last Name:</label>
-  <input id="lastName" name="lastName" required type="text"><br>
+<form id='signup-form' method="post" name='frmRegistration' th:action="@{/register}" th:object="${userDetails}">
+    <div id="personal-field">
+        <label>Name</label><span class="signup-error" id="name-error"></span>
+        <div>
+            <input class="form-control" id="firstName" name="firstName" th:field="*{firstName}" type="text"/>
+            <div class="alert alert-danger alert-dismissible fade show"
+                 th:errors="*{firstName}"></div>
+        </div>
 
-  <label for="email">Email:</label>
-  <input id="email" name="email" required type="email"><br>
+        <label>lastName</label><span class="lastName-error" id="lastName-error"></span>
 
-  <label for="password">Password:</label>
-  <input id="password" name="password" required type="password"><br>
+        <div>
+            <input class="form-control" id="lastName" name="lastName" th:field="*{lastName}" type="text"/>
+            <div class="alert alert-warning" th:errors="*{lastName}"></div>
 
-  <label for="userName">Username:</label>
-  <input id="userName" name="userName" required type="text"><br>
+        </div>
+    </div>
 
-  <input type="submit" value="Register">
+    <div id="password-field" style="display: none;">
+        <label>Enter Password</label><span class="signup-error"
+                                           id="password-error"></span>
+        <div>
+            <input class="form-control" id="password1" name="password" th:field="*{password}"
+                   type="password"/>
+            <div class="alert alert-warning" th:errors="*{password}"></div>
+
+        </div>
+        <label>Re-enter Password</label><span class="signup-error"
+                                              id="confirm-password-error"></span>
+        <div>
+            <input class="form-control" id="confirm-password" name="confirm-password"
+                   type="password"/>
+        </div>
+    </div>
+
+    <div id="contact-field" style="display: none;">
+        <label>Email</label><span class="signup-error" id="email-error"></span>
+        <div>
+            <input class="form-control" id="email" name="email" th:field="*{email}" type="text"/>
+            <div class="alert alert-warning" th:errors="*{email}"></div>
+
+        </div>
+        <div>
+            <input class="form-control" id="userName" name="userName" th:field="*{userName}" type="text"/>
+            <div class="alert alert-warning" th:errors="*{userName}"></div>
+
+        </div>
+
+    </div>
+
+    <div>
+        <input class="btnAction" id="back" name="back" style="display: none;"
+               type="button" value="Back"> <input
+            class="btnAction" id="next" name="next" type="button" value="Next">
+        <input class="btnAction" id="finish" name="finish" style="display: none;"
+               type="submit" value="Register">
+    </div>
+
 </form>
 </body>
 </html>
