--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello world</title>
+    <title>index</title>
 </head>
 <body>
 <h1>Plateforme de retour d'experiences.</h1>
 <h2>Bienvenus !</h2>
-<h3>Pour vous inscrire c'est par ici : </h3>
-<a href="/register">lien d'inscription</a>
+<h3>Pour ajouter une experience cliquer ici :  </h3>
+<a href="/experience/registration">ajouter une experience</a>
+
+
+<a href="">voir vos retour d'experience</a>
+
+<br>
+<h3>Pour vous déconnecter cliquer ici :</h3>
+<a href="/logout">deconnexion</a>
 </body>
 </html>
