suppression des champs preno et nom de l'user qui sont inutiles + verif sur l'unicite de l'adresse email + refonte du formulaire d'inscription + verif de la correspondance des mdp

--- a/src/main/resources/templates/experienceForm.html
+++ b/src/main/resources/templates/experienceForm.html
@@ -304,7 +304,7 @@
                 </span>
         </div>
 
-        <label>Expérience au moment de la signature du contrat</label><span class="signup-error"
+        <label>Expérience pour ce poste au moment de la signature du contrat</label><span class="signup-error"
                                                                             id="experienceBefore-error"></span>
         <div>
             <input class="form-control" id="experienceBefore" name="experienceBefore" th:field="*{work.experienceBefore}"
