--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -46,15 +46,15 @@
                     <form method="post" role="form" th:action="@{/login}"
                           class="form-horizontal">
                         <div class="form-group mb-3">
-                            <label class="control-label"> Username</label>
+                            <label class="control-label">Nom d'utilisateur</label>
                             <input type="text"
                                    id="username" name="username" class="form-control"
-                                   placeholder="Enter username"/>
+                                   placeholder="Entrer votre nom d'utilisateur"/>
                         </div>
                         <div class="form-group mb-3">
-                            <label class="control-label"> Password</label> <input
+                            <label class="control-label">Mot de passe</label> <input
                                 type="password" id="password" name="password"
-                                class="form-control" placeholder="Enter password"/>
+                                class="form-control" placeholder="Entrer votre mot de passe"/>
                         </div>
                         <div class="form-group mb-3">
                             <button type="submit" class="btn btn-primary">Submit</button>
