--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -100,7 +100,7 @@
 <body>
 
 <h3>Formulaire d'inscription</h3>
-
+<a href="/login">j'ai déjà un compte</a>
 <div class="container">
     <form id='signup-form' method="post" name='frmRegistration' th:action="@{/register}" th:object="${userDetails}">
         <div class="row">
