--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <a href="/experience/registration">ajouter une experience</a>
 
 
-<a href="">voir vos retour d'experience</a>
+<a href="/experience/list">voir vos retour d'experience</a>
 
 <br>
 <h3>Pour vous déconnecter cliquer ici :</h3>
