ajout de la recherche des experiences avec filtres : il y a le nom de l'etablissement et le departement ou CP qui fonctionnent ainsi que les 2 combinés
ajout de la modification et suppression d'une experience

ajout d'un lien a l'index pour la recherche

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,14 +7,19 @@
 <body>
 <h1>Plateforme de retour d'experiences.</h1>
 
-<h2>Bienvenue <td th:text="${username}">nom</td> !</h2>
-<h3>Pour ajouter une experience cliquer ici :  </h3>
+<h2>Bienvenue
+    <td th:text="${username}">nom</td>
+    !
+</h2>
+<h3>Pour ajouter une experience cliquer ici : </h3>
 <a href="/experience/registration">ajouter une experience</a>
 
 
 <a href="/experience/list">voir vos retour d'experience</a>
 
 <br>
+
+<a href="/search">rechercher une experience</a><br>
 <h3>Pour vous déconnecter cliquer ici :</h3>
 <a href="/logout">deconnexion</a>
 </body>
