--- a/src/main/resources/templates/listeExperiences.html
+++ b/src/main/resources/templates/listeExperiences.html
@@ -86,18 +86,26 @@
         }
 
     </style>
+    <link href="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.css"
+          rel="stylesheet"
+          type="text/css"/>
+    <link crossorigin="anonymous"
+          href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+          rel="stylesheet"/>
 </head>
 <body>
 <h1>liste de vos experiences</h1>
 
-<table class=”events-table” >
+<table class=”events-table id="experienceTable" table table-bordered table-striped”>
     <thead>
     <tr>
         <th class=”event-place”>lieu</th>
         <th class=”event-city”>ville</th>
         <th class=”event-period”>periode</th>
         <th class=”event-occupation”>poste</th>
-        <th class=”event-modify”>modifier</th>
+        <th class=”event-modify-delete”>action</th>
+
 
     </tr>
     </thead>
@@ -105,19 +113,38 @@
     <tbody>
     <tr th:each="experience: ${listeExperience}">
         <td data-label=”lieu” th:text="${experience.place.name}"/>
-        <td data-label=”ville”  th:text="${experience.place.city}" />
+        <td data-label=”ville” th:text="${experience.place.city}"/>
 
-        <td data-label=”period” th:text="${#dates.format(experience.work.startDate, 'dd-MM-yyyy')} + '   -   ' + ${#dates.format(experience.work.endDate, 'dd-MM-yyyy')}"/>
+        <td data-label=”period”
+            th:text="${#dates.format(experience.work.startDate, 'dd-MM-yyyy')} + '   -   ' + ${#dates.format(experience.work.endDate, 'dd-MM-yyyy')}"/>
 
-        <td data-label=”occupation”><p  th:each="postes : ${experience.work.occupiedFunction}"
-                                        th:value="${postes}" th:text="${postes.name().replace('_',' ').toLowerCase()}"/></td>
+        <td data-label=”occupation”><p th:each="postes : ${experience.work.occupiedFunction}"
+                                       th:text="${postes.name().replace('_',' ').toLowerCase()}" th:value="${postes}"/>
+        </td>
 
-        <td data-label=”modify”><a th:href="@{/experience/modify/{variable}(variable=${experience.id})}">modifier</a></td>
+        <td data-label=”modify”><a class="btn btn-info"
+                                   th:href="@{/experience/modify/{variable}(variable=${experience.id})}">modifier</a>
+            <a class="btn btn-danger ml-2" th:href="@{/experience/delete/{variable}(variable=${experience.id})}">supprimer</a>
+        </td>
 
     </tr>
     </tbody>
+
 </table>
 
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://cdn.datatables.net/v/bs4/dt-1.10.25/datatables.min.js" type="text/javascript"></script>
+<script>
+    $(document).ready(function () {
+        $("#experienceTable").DataTable({
+            'aoColumnDefs': [{
+                'bSortable': false,
+                'aTargets': [-1] /* 1st one, start by the right */
+            }]
+        });
+    })
+</script>
 
 
 </body>
