--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,18 +9,12 @@
 
 <h2>Bienvenue
     <td th:text="${username}">nom</td>
-    !
 </h2>
-<h3>Pour ajouter une experience cliquer ici : </h3>
-<a href="/experience/registration">ajouter une experience</a>
-
-
-<a href="/experience/list">voir vos retour d'experience</a>
-
-<br>
-
-<a href="/search">rechercher une experience</a><br>
-<h3>Pour vous déconnecter cliquer ici :</h3>
-<a href="/logout">deconnexion</a>
+<ul>
+    <li><a href="/experience/registration">ajouter une experience</a></li>
+    <li><a href="/experience/list">voir vos retour d'experience</a></li>
+    <li><a href="/search">rechercher une experience</a></li>
+    <li><a href="/logout">deconnexion</a></li>
+</ul>
 </body>
 </html>
