--- a/src/main/resources/templates/customLogin.html
+++ b/src/main/resources/templates/customLogin.html
@@ -7,26 +7,12 @@
             rel="stylesheet">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand">Spring Security
-            Custom Login-Logout Example</a>
-        <button class="navbar-toggler" type="button"
-                data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</nav>
-<br/>
 
-<h1>Plateforme de retour d'experiences.</h1>
-<h2>Bienvenus !</h2>
-<h3>Pour vous inscrire c'est par ici : </h3>
-<a href="/register">lien d'inscription</a>
+<h1>Bienvenu sur la plateforme de retour d'experiences.</h1>
 
-<h3>Pour vous connecter c'est ici : </h3>
+<p>Pour vous inscrire c'est par ici : <a href="/register">lien d'inscription</a></p>
+
+<p>Pour vous connecter c'est ici : </p>
 
 <br/>
 <div class="container">
