--- a/src/main/resources/templates/experienceForm.html
+++ b/src/main/resources/templates/experienceForm.html
@@ -10,6 +10,10 @@
             font-family: tahoma;
             font-size: 12px;
         }
+        a {
+            color : dimgray;
+        }
+
 
         #signup-step {
             margin: auto;
@@ -322,6 +326,20 @@
 </head>
 
 <body>
+
+<nav>
+    <table>
+        <thead>
+        <tr>            <th><a href="/index" th:href="@{/index}">index</a></th>
+            <th><a href="/experience/registration" th:href="@{/experience/registration}">Ajouter une expérience</a>
+            </th>
+            <th><a href="/experience/list" th:href="@{/experience/list}">Voir vos retours d'expérience</a></th>
+            <th><a href="/search" th:href="@{/search}">Rechercher une expérience</a></th>
+            <th><a href="/logout" th:href="@{/logout}">Déconnexion</a></th>
+        </tr>
+        </thead>
+    </table>
+</nav>
 
 <div id="container">
     <ul id="signup-step">
