--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>index</title>
+    <style>
+        a {
+            color : dimgray;
+        }
+    </style>
 </head>
 <body>
 <h1>Plateforme de retour d'experiences.</h1>
